--- a/config/west.yml
+++ b/config/west.yml
@@ -2,6 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: prospector
+      url-base: https://github.com/t-ogura
     - name: sayu-hub
       url-base: https://github.com/sayu-hub
     - name: badjeff    # <-- PMW3610
@@ -17,6 +19,10 @@ manifest:
       remote: zmkfirmware
       revision: v0.3.0
       import: app/west.yml
+    - name: prospector-zmk-module
+      remote: prospector
+      revision: v2.0.0
+      path: modules/prospector-zmk-module
     - name: zmk-pmw3610-driver
       remote: badjeff
       revision: main
