--- a/config/mona2_r.conf
+++ b/config/mona2_r.conf
@@ -27,3 +27,15 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 #Bluetooth config -------------------
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+
+# Enable status advertisement
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MyKeyboard"
+
+# Power optimization (10Hz active, 0.03Hz idle)
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000
+
+# Split keyboard battery monitoring (if applicable)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
