--- a/config/mona2_l.conf
+++ b/config/mona2_l.conf
@@ -6,3 +6,15 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Enable status advertisement
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MyKeyboard"
+
+# Power optimization (10Hz active, 0.03Hz idle)
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000
+
+# Split keyboard battery monitoring (if applicable)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
